--- a/learn.ipynb
+++ b/learn.ipynb
@@ -11,7 +11,222 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b2262868e2e148088a7d85884e666727",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FigureWidget({\n",
+       "    'data': [{'colorscale': [[0.0, 'rgb(103,0,31)'], [0.1, 'rgb(178,24,43)'],\n",
+       "                             [0.2, 'rgb(214,96,77)'], [0.3, 'rgb(244,165,130)'],\n",
+       "                             [0.4, 'rgb(253,219,199)'], [0.5, 'rgb(247,247,247)'],\n",
+       "                             [0.6, 'rgb(209,229,240)'], [0.7, 'rgb(146,197,222)'],\n",
+       "                             [0.8, 'rgb(67,147,195)'], [0.9, 'rgb(33,102,172)'],\n",
+       "                             [1.0, 'rgb(5,48,97)']],\n",
+       "              'showscale': False,\n",
+       "              'type': 'heatmap',\n",
+       "              'uid': '4cf8b5b6-f0d0-4f57-ac80-fbbb83b6e56d',\n",
+       "              'xaxis': 'x',\n",
+       "              'yaxis': 'y',\n",
+       "              'z': array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]),\n",
+       "              'zmax': 1,\n",
+       "              'zmin': -1},\n",
+       "             {'colorscale': [[0.0, '#30123b'], [0.07142857142857142, '#4145ab'],\n",
+       "                             [0.14285714285714285, '#4675ed'],\n",
+       "                             [0.21428571428571427, '#39a2fc'], [0.2857142857142857,\n",
+       "                             '#1bcfd4'], [0.35714285714285715, '#24eca6'],\n",
+       "                             [0.42857142857142855, '#61fc6c'], [0.5, '#a4fc3b'],\n",
+       "                             [0.5714285714285714, '#d1e834'], [0.6428571428571429,\n",
+       "                             '#f3c63a'], [0.7142857142857143, '#fe9b2d'],\n",
+       "                             [0.7857142857142857, '#f36315'], [0.8571428571428571,\n",
+       "                             '#d93806'], [0.9285714285714286, '#b11901'], [1.0,\n",
+       "                             '#7a0402']],\n",
+       "              'showscale': False,\n",
+       "              'type': 'heatmap',\n",
+       "              'uid': 'ffaac5f3-c7ab-4785-a402-b8a5986a7d54',\n",
+       "              'xaxis': 'x2',\n",
+       "              'yaxis': 'y2',\n",
+       "              'z': array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]),\n",
+       "              'zmax': 1,\n",
+       "              'zmin': 0},\n",
+       "             {'line': {'color': 'green'},\n",
+       "              'mode': 'lines',\n",
+       "              'showlegend': False,\n",
+       "              'type': 'scatter',\n",
+       "              'uid': '5be8629c-e797-493b-be46-75c7d5dbb9bf',\n",
+       "              'x': [],\n",
+       "              'xaxis': 'x3',\n",
+       "              'y': [],\n",
+       "              'yaxis': 'y3'},\n",
+       "             {'line': {'color': 'red'},\n",
+       "              'mode': 'lines',\n",
+       "              'showlegend': False,\n",
+       "              'type': 'scatter',\n",
+       "              'uid': 'b04a1f2c-bbf6-4f31-85a4-a18daedbf843',\n",
+       "              'x': [],\n",
+       "              'xaxis': 'x3',\n",
+       "              'y': [],\n",
+       "              'yaxis': 'y3'},\n",
+       "             {'colorscale': [[0.0, '#30123b'], [0.07142857142857142, '#4145ab'],\n",
+       "                             [0.14285714285714285, '#4675ed'],\n",
+       "                             [0.21428571428571427, '#39a2fc'], [0.2857142857142857,\n",
+       "                             '#1bcfd4'], [0.35714285714285715, '#24eca6'],\n",
+       "                             [0.42857142857142855, '#61fc6c'], [0.5, '#a4fc3b'],\n",
+       "                             [0.5714285714285714, '#d1e834'], [0.6428571428571429,\n",
+       "                             '#f3c63a'], [0.7142857142857143, '#fe9b2d'],\n",
+       "                             [0.7857142857142857, '#f36315'], [0.8571428571428571,\n",
+       "                             '#d93806'], [0.9285714285714286, '#b11901'], [1.0,\n",
+       "                             '#7a0402']],\n",
+       "              'showscale': False,\n",
+       "              'type': 'heatmap',\n",
+       "              'uid': '4012be7a-655c-4bd5-bc14-47875719681f',\n",
+       "              'xaxis': 'x4',\n",
+       "              'yaxis': 'y4',\n",
+       "              'z': array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]),\n",
+       "              'zmax': 1,\n",
+       "              'zmin': 0},\n",
+       "             {'line': {'color': 'blue'},\n",
+       "              'mode': 'lines',\n",
+       "              'showlegend': False,\n",
+       "              'type': 'scatter',\n",
+       "              'uid': 'd288806f-285d-46f0-9faa-974bedc3c39f',\n",
+       "              'x': [],\n",
+       "              'xaxis': 'x5',\n",
+       "              'y': [],\n",
+       "              'yaxis': 'y5'}],\n",
+       "    'layout': {'annotations': [{'font': {'size': 16},\n",
+       "                                'showarrow': False,\n",
+       "                                'text': 'Books',\n",
+       "                                'x': 0.5,\n",
+       "                                'xanchor': 'center',\n",
+       "                                'xref': 'paper',\n",
+       "                                'y': 1.0,\n",
+       "                                'yanchor': 'bottom',\n",
+       "                                'yref': 'paper'},\n",
+       "                               {'font': {'size': 16},\n",
+       "                                'showarrow': False,\n",
+       "                                'text': 'Level Proximity',\n",
+       "                                'x': 0.5,\n",
+       "                                'xanchor': 'center',\n",
+       "                                'xref': 'paper',\n",
+       "                                'y': 0.7900000000000001,\n",
+       "                                'yanchor': 'bottom',\n",
+       "                                'yref': 'paper'},\n",
+       "                               {'font': {'size': 16},\n",
+       "                                'showarrow': False,\n",
+       "                                'text': 'Bid and Ask Price Levels',\n",
+       "                                'x': 0.5,\n",
+       "                                'xanchor': 'center',\n",
+       "                                'xref': 'paper',\n",
+       "                                'y': 0.5800000000000001,\n",
+       "                                'yanchor': 'bottom',\n",
+       "                                'yref': 'paper'},\n",
+       "                               {'font': {'size': 16},\n",
+       "                                'showarrow': False,\n",
+       "                                'text': 'Prediction',\n",
+       "                                'x': 0.5,\n",
+       "                                'xanchor': 'center',\n",
+       "                                'xref': 'paper',\n",
+       "                                'y': 0.37000000000000005,\n",
+       "                                'yanchor': 'bottom',\n",
+       "                                'yref': 'paper'},\n",
+       "                               {'font': {'size': 16},\n",
+       "                                'showarrow': False,\n",
+       "                                'text': 'Loss',\n",
+       "                                'x': 0.5,\n",
+       "                                'xanchor': 'center',\n",
+       "                                'xref': 'paper',\n",
+       "                                'y': 0.16000000000000003,\n",
+       "                                'yanchor': 'bottom',\n",
+       "                                'yref': 'paper'}],\n",
+       "               'height': 800,\n",
+       "               'margin': {'b': 50, 'l': 50, 'r': 50, 't': 50},\n",
+       "               'showlegend': True,\n",
+       "               'template': '...',\n",
+       "               'width': 1200,\n",
+       "               'xaxis': {'anchor': 'y', 'domain': [0.0, 1.0]},\n",
+       "               'xaxis2': {'anchor': 'y2', 'domain': [0.0, 1.0]},\n",
+       "               'xaxis3': {'anchor': 'y3', 'domain': [0.0, 1.0]},\n",
+       "               'xaxis4': {'anchor': 'y4', 'domain': [0.0, 1.0]},\n",
+       "               'xaxis5': {'anchor': 'y5', 'domain': [0.0, 1.0]},\n",
+       "               'yaxis': {'anchor': 'x', 'domain': [0.8400000000000001, 1.0]},\n",
+       "               'yaxis2': {'anchor': 'x2', 'domain': [0.6300000000000001, 0.7900000000000001]},\n",
+       "               'yaxis3': {'anchor': 'x3', 'domain': [0.42000000000000004, 0.5800000000000001]},\n",
+       "               'yaxis4': {'anchor': 'x4', 'domain': [0.21000000000000002, 0.37000000000000005]},\n",
+       "               'yaxis5': {'anchor': 'x5', 'domain': [0.0, 0.16000000000000003]}}\n",
+       "})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "device=device(type='cuda')\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "968c65ab09f44ea4815ca154c40165ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7c51430e0fa44a5c84c1fb4acc95cce5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import plotly.graph_objects as go\n",
