--- a/replay.ipynb
+++ b/replay.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "replay_conf_3 = ReplayConfig(\n",
-    "    markets=[\"ETH-BTC\", \"BTC-USD\", \"ETH-USD\"],\n",
+    "    markets=[\"ETH-USD\", \"BTC-USD\", \"ETH-BTC\"],\n",
     "    data_dir='data',\n",
     "    date_regexp='2024-08-04',\n",
     "    max_samples=-1,\n",
@@ -32,18 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deep_orderbook.feeds.coinbase_feed import CoinbaseFeed\n",
-    "from deep_orderbook.replayer import ParquetReplayer\n",
-    "\n",
-    "\n",
-    "async def iter_sec(config: ReplayConfig):\n",
-    "    async with CoinbaseFeed(\n",
-    "        config=config,\n",
-    "        replayer=ParquetReplayer(config=config),\n",
-    "    ) as feed:\n",
-    "        async for onesec in feed.one_second_iterator():\n",
-    "            yield onesec\n",
-    "\n",
+    "from deep_orderbook.replayer import iter_sec\n",
     "\n",
     "async for onesec in iter_sec(config=replay_conf_3.but(max_samples=3)):\n",
     "    print(onesec)"
@@ -57,8 +46,11 @@
    "source": [
     "shaper_config = ShaperConfig()\n",
     "\n",
+    "\n",
     "async def iter_shapes(config: ReplayConfig):\n",
-    "    symbol_shapers = {pair: ArrayShaper(config=shaper_config) for pair in config.markets}\n",
+    "    symbol_shapers = {\n",
+    "        pair: ArrayShaper(config=shaper_config) for pair in config.markets\n",
+    "    }\n",
     "    async for onesec in iter_sec(config=config):\n",
     "        yield {\n",
     "            market: await symbol_shapers[market].make_arr3d(onesec.symbols[market])\n",
@@ -66,7 +58,9 @@
     "        }\n",
     "\n",
     "\n",
-    "async for shaped in iter_shapes(config=replay_conf_3.but(max_samples=1, skip_until_time=\"23:15\")):\n",
+    "async for shaped in iter_shapes(\n",
+    "    config=replay_conf_3.but(max_samples=1, skip_until_time=\"23:15\")\n",
+    "):\n",
     "    for k, v in shaped.items():\n",
     "        print(f\"{k}: {v.shape}, values from {v.min()} to {v.max()}\")"
    ]
@@ -77,22 +71,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from deep_orderbook.visu import Visualizer\n",
     "import seaborn_image as isns\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "async def iter_gen_arrays(config: ReplayConfig):\n",
-    "    async for shapes in iter_shapes(config=config.but(markets=[\"ETH-USD\"])):\n",
-    "        yield shapes['ETH-USD'].transpose(1, 0, 2)\n",
     "\n",
-    "\n",
-    "async for arr in iter_gen_arrays(config=replay_conf_3.but(max_samples=100, skip_until_time=\"23:15\")):\n",
-    "    im = arr.copy()\n",
-    "    im[:,:,0] *= -0.2\n",
-    "    im[:,:,1:3] *= 1e6\n",
-    "    isns.imshow(im, origin='lower', cmap='coolwarm', vmin=-1, vmax=1, gray=True)\n",
+    "async for shapes in iter_shapes(\n",
+    "    config=replay_conf_3.but(max_samples=100, skip_until_time=\"23:15\")\n",
+    "):\n",
+    "    books_array = shapes['ETH-USD']\n",
+    "    im_data, _, _ = Visualizer.for_image_display(books_array=books_array)\n",
+    "    isns.imshow(im_data, origin='lower', cmap='coolwarm', vmin=-1, vmax=1, gray=True)\n",
     "    clear_output(wait=True)\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
@@ -101,15 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def iter_shapes_t2l(replay_config: ReplayConfig, shaper_config: ShaperConfig):\n",
-    "    symbol_shaper = ArrayShaper(config=shaper_config)\n",
-    "    async for onesec in iter_sec(config=replay_config):\n",
-    "        yield [\n",
-    "            await symbol_shaper.make_arr3d(onesec.symbols['ETH-USD']),\n",
-    "            await symbol_shaper.build_time_level_trade(),\n",
-    "            symbol_shaper.prices_array,\n",
-    "        ]\n",
-    "\n",
+    "from deep_orderbook.shaper import iter_shapes_t2l\n",
     "\n",
     "async for shapes in iter_shapes_t2l(\n",
     "    replay_config=replay_conf_3.but(max_samples=1, skip_until_time=\"23:15\"),\n",
@@ -131,15 +115,10 @@
     "\n",
     "# Define your asynchronous function to update the figure\n",
     "async def rolling_plot(config: ReplayConfig):\n",
-    "    async for shaped, t2l, pxar in iter_shapes_t2l(replay_config=config):\n",
-    "        im_data = shaped.copy().transpose(1, 0, 2)\n",
-    "        im_data[:, :, 0] *= -0.5\n",
-    "        im_data[:, :, 1:3] *= 1e6\n",
-    "        im_data = np.clip(im_data, -1, 1)\n",
-    "        im_data = im_data.mean(axis=2)\n",
-    "        t2l_data = np.clip(t2l[:, :, 0].T, -1, 1)\n",
-    "\n",
-    "        vis.update(books_z_data=im_data, level_reach_z_data=t2l_data, bidask=pxar)\n",
+    "    async for books_array, t2l_array, pxar in iter_shapes_t2l(\n",
+    "        replay_config=config, shaper_config=shaper_config\n",
+    "    ):\n",
+    "        vis.update(books_z_data=books_array, level_reach_z_data=t2l_array, bidask=pxar)\n",
     "\n",
     "\n",
     "# Run the asynchronous function\n",
@@ -165,59 +144,89 @@
     "pn.extension()\n",
     "\n",
     "# Initialize Streams with appropriate empty data\n",
-    "im_pipe = Pipe(data=np.zeros((10, 10)))        # For 'Books' heatmap\n",
-    "t2l_pipe = Pipe(data=np.zeros((10, 10)))       # For 'Level Proximity' heatmap\n",
-    "bidask_pipe = Pipe(data=np.empty((0, 2)))      # For 'Bid and Ask Price Levels'\n",
+    "im_pipe = Pipe(data=np.zeros((10, 10)))  # For 'Books' heatmap\n",
+    "t2l_pipe = Pipe(data=np.zeros((10, 10)))  # For 'Level Proximity' heatmap\n",
+    "bidask_pipe = Pipe(data=np.empty((0, 2)))  # For 'Bid and Ask Price Levels'\n",
     "\n",
     "# Define HoloViews DynamicMaps for heatmaps\n",
-    "im_dmap = hv.DynamicMap(lambda data: hv.Image(data).opts(invert_yaxis=True,\n",
-    "    cmap='RdBu', colorbar=True, width=1200, height=200, title='Books',\n",
-    "    xaxis=None, yaxis=None, ylim=(-0.5, 0.5),\n",
-    "    axiswise=True, framewise=True, shared_axes=False\n",
-    "), streams=[im_pipe])\n",
+    "im_dmap = hv.DynamicMap(\n",
+    "    lambda data: hv.Image(data).opts(\n",
+    "        invert_yaxis=True,\n",
+    "        cmap='RdBu',\n",
+    "        colorbar=True,\n",
+    "        width=1200,\n",
+    "        height=200,\n",
+    "        title='Books',\n",
+    "        xaxis=None,\n",
+    "        yaxis=None,\n",
+    "        ylim=(-0.5, 0.5),\n",
+    "        axiswise=True,\n",
+    "        framewise=True,\n",
+    "        shared_axes=False,\n",
+    "    ),\n",
+    "    streams=[im_pipe],\n",
+    ")\n",
     "\n",
-    "t2l_dmap = hv.DynamicMap(lambda data: hv.Image(data).opts(invert_yaxis=True,\n",
-    "    cmap='Turbo', colorbar=True, width=1200, height=200, title='Level Proximity',\n",
-    "    xaxis=None, yaxis=None, ylim=(-0.5, 0.5),\n",
-    "    axiswise=True, framewise=True, shared_axes=False\n",
-    "), streams=[t2l_pipe])\n",
+    "t2l_dmap = hv.DynamicMap(\n",
+    "    lambda data: hv.Image(data).opts(\n",
+    "        invert_yaxis=True,\n",
+    "        cmap='Turbo',\n",
+    "        colorbar=True,\n",
+    "        width=1200,\n",
+    "        height=200,\n",
+    "        title='Level Proximity',\n",
+    "        xaxis=None,\n",
+    "        yaxis=None,\n",
+    "        ylim=(-0.5, 0.5),\n",
+    "        axiswise=True,\n",
+    "        framewise=True,\n",
+    "        shared_axes=False,\n",
+    "    ),\n",
+    "    streams=[t2l_pipe],\n",
+    ")\n",
+    "\n",
     "\n",
     "def bidask_plot(data):\n",
-    "    bid_curve = hv.Curve((data[:, 0]), 'bid').opts(color='green', line_width=2, framewise=True)\n",
-    "    ask_curve = hv.Curve((data[:, 1]), 'ask').opts(color='red', line_width=2, framewise=True)\n",
-    "    return (bid_curve * ask_curve).opts(width=1200, height=200, title='Bid and Ask', \n",
-    "                                        # yaxis=None, xaxis='bottom'\n",
-    "                                       )\n",
+    "    bid_curve = hv.Curve((data[:, 0]), 'bid').opts(\n",
+    "        color='green', line_width=2, framewise=True\n",
+    "    )\n",
+    "    ask_curve = hv.Curve((data[:, 1]), 'ask').opts(\n",
+    "        color='red', line_width=2, framewise=True\n",
+    "    )\n",
+    "    return (bid_curve * ask_curve).opts(\n",
+    "        width=1200,\n",
+    "        height=200,\n",
+    "        title='Bid and Ask',\n",
+    "        # yaxis=None, xaxis='bottom'\n",
+    "    )\n",
+    "\n",
+    "\n",
     "bidask_dmap = hv.DynamicMap(bidask_plot, streams=[bidask_pipe])\n",
     "\n",
     "# Layout the plots vertically using Panel\n",
-    "dashboard = pn.Column(\n",
-    "    pn.panel(im_dmap),\n",
-    "    pn.panel(t2l_dmap),\n",
-    "    pn.panel(bidask_dmap)\n",
-    ")\n",
+    "dashboard = pn.Column(pn.panel(im_dmap), pn.panel(t2l_dmap), pn.panel(bidask_dmap))\n",
+    "\n",
     "\n",
     "# Define the async update function\n",
     "async def run_updates():\n",
-    "    async for shaped, t2l, pxar in iter_shapes_t2l(replay_config=replay_conf_3.but(max_samples=100, skip_until_time=\"23:15\")):\n",
-    "        im_data = shaped.copy().transpose(1, 0, 2)\n",
-    "        im_data[:, :, 0] *= -0.5\n",
-    "        im_data[:, :, 1:3] *= 1e6\n",
-    "        im_data = np.clip(im_data, -1, 1)\n",
-    "        im_mean = im_data.mean(axis=2)\n",
+    "    async for shaped, t2l, pxar in iter_shapes_t2l(\n",
+    "        replay_config=replay_conf_3.but(max_samples=100, skip_until_time=\"23:15\"),\n",
+    "        shaper_config=shaper_config,\n",
+    "    ):\n",
+    "        books_z_data, level_reach_z_data, bidask = Visualizer.for_image_display(\n",
+    "            shaped, t2l, pxar\n",
+    "        )\n",
+    "        im_pipe.send(np.clip(books_z_data, -1, 1))\n",
+    "        t2l_pipe.send(level_reach_z_data)\n",
+    "        bidask_pipe.send(bidask)\n",
     "\n",
-    "        t2l_data = np.clip(t2l[:, :, 0].T, -1, 1)\n",
-    "\n",
-    "        im_pipe.send(im_mean)\n",
-    "        t2l_pipe.send(t2l_data)\n",
-    "        bidask_pipe.send(pxar)\n",
     "\n",
     "display(dashboard)\n",
     "await asyncio.sleep(0.1)\n",
     "\n",
     "# Start the async update in the background\n",
     "asyncio.create_task(run_updates())\n",
-    "# dashboard.show()\n"
+    "# dashboard.show()"
    ]
   },
   {
@@ -228,7 +237,10 @@
    "source": [
     "import plotly.express as px\n",
     "from skimage import io\n",
-    "img = io.imread('https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Crab_Nebula.jpg/240px-Crab_Nebula.jpg')\n",
+    "\n",
+    "img = io.imread(\n",
+    "    'https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Crab_Nebula.jpg/240px-Crab_Nebula.jpg'\n",
+    ")\n",
     "fig = px.imshow(img)\n",
     "fig.show()"
    ]
@@ -323,17 +335,27 @@
     "\n",
     "from learn.test_learn import train_and_predict\n",
     "\n",
-    "async for books_array, time_levels, pxar, prediction, loss in train_and_predict(max_samples=10, epoch=1):\n",
+    "async for books_array, time_levels, pxar, prediction, loss in train_and_predict(\n",
+    "    max_samples=10, epoch=1\n",
+    "):\n",
     "    print(loss)\n",
+    "\n",
     "\n",
     "# Define your asynchronous function to update the figure\n",
     "async def rolling_plot(max_samples=100, epoch=1):\n",
     "    # Initialize the figure with three subplots and adjust row heights\n",
     "    fig = make_subplots(\n",
-    "        rows=5, cols=1,\n",
+    "        rows=5,\n",
+    "        cols=1,\n",
     "        subplot_titles=(\"Books\", \"Level Proximity\", \"Bid and Ask Price Levels\"),\n",
     "        vertical_spacing=0.05,\n",
-    "        row_heights=[0.2, 0.2, 0.2, 0.2, 0.2]  # Adjust the relative heights of the rows\n",
+    "        row_heights=[\n",
+    "            0.2,\n",
+    "            0.2,\n",
+    "            0.2,\n",
+    "            0.2,\n",
+    "            0.2,\n",
+    "        ],  # Adjust the relative heights of the rows\n",
     "    )\n",
     "\n",
     "    # Increase the overall figure height\n",
@@ -341,7 +363,7 @@
     "        height=600,  # Adjusted for three subplots\n",
     "        width=1200,\n",
     "        margin=dict(t=50, b=50, l=50, r=50),\n",
-    "        showlegend=True\n",
+    "        showlegend=True,\n",
     "    )\n",
     "\n",
     "    # Create the figure widget\n",
@@ -350,45 +372,27 @@
     "\n",
     "    # Initialize empty traces for heatmaps\n",
     "    im_trace = go.Heatmap(\n",
-    "        z=np.zeros((10, 10)),\n",
-    "        colorscale='RdBu',\n",
-    "        zmin=-1, zmax=1,\n",
-    "        showscale=False\n",
+    "        z=np.zeros((10, 10)), colorscale='RdBu', zmin=-1, zmax=1, showscale=False\n",
     "    )\n",
     "    t2l_trace = go.Heatmap(\n",
-    "        z=np.zeros((10, 10)),\n",
-    "        colorscale='Turbo',\n",
-    "        zmin=0, zmax=1,\n",
-    "        showscale=False\n",
+    "        z=np.zeros((10, 10)), colorscale='Turbo', zmin=0, zmax=1, showscale=False\n",
     "    )\n",
     "\n",
     "    # Initialize line traces for bid and ask price levels\n",
     "    bid_trace = go.Scatter(\n",
-    "        x=[], y=[],\n",
-    "        mode='lines',\n",
-    "        line=dict(color='green'),\n",
-    "        showlegend=False\n",
+    "        x=[], y=[], mode='lines', line=dict(color='green'), showlegend=False\n",
     "    )\n",
     "    ask_trace = go.Scatter(\n",
-    "        x=[], y=[],\n",
-    "        mode='lines',\n",
-    "        line=dict(color='red'),\n",
-    "        showlegend=False\n",
+    "        x=[], y=[], mode='lines', line=dict(color='red'), showlegend=False\n",
     "    )\n",
     "\n",
     "    pred_trace = go.Heatmap(\n",
-    "        z=np.zeros((10, 10)),\n",
-    "        colorscale='Turbo',\n",
-    "        zmin=0, zmax=1,\n",
-    "        showscale=False\n",
+    "        z=np.zeros((10, 10)), colorscale='Turbo', zmin=0, zmax=1, showscale=False\n",
     "    )\n",
     "\n",
     "    # Initialize line traces for bid and ask price levels\n",
     "    loss_trace = go.Scatter(\n",
-    "        x=[], y=[],\n",
-    "        mode='lines',\n",
-    "        line=dict(color='green'),\n",
-    "        showlegend=False\n",
+    "        x=[], y=[], mode='lines', line=dict(color='green'), showlegend=False\n",
     "    )\n",
     "\n",
     "    # Add traces to the figure widget\n",
@@ -401,7 +405,9 @@
     "\n",
     "    # Asynchronous loop to update the figure\n",
     "    losses = []\n",
-    "    async for shaped, t2l, pxar, prediction, loss in train_and_predict(max_samples=max_samples, epoch=epoch):\n",
+    "    async for shaped, t2l, pxar, prediction, loss in train_and_predict(\n",
+    "        max_samples=max_samples, epoch=epoch\n",
+    "    ):\n",
     "        # Process your data for heatmaps\n",
     "        im_data = shaped.copy().transpose(1, 0, 2)\n",
     "        im_data[:, :, 0] *= -0.5\n",
@@ -417,7 +423,7 @@
     "        pred_shape = prediction.reshape(t2l.shape).transpose(1, 0, 2)\n",
     "        pred_shape = np.clip(pred_shape[:, :, 0], -1, 1)\n",
     "        losses.append(loss)\n",
-    "        losses =losses[-512:]\n",
+    "        losses = losses[-512:]\n",
     "\n",
     "        # Update the figure widget traces\n",
     "        with fig_widget.batch_update():\n",
@@ -435,6 +441,7 @@
     "            fig_widget.data[4].z = pred_shape\n",
     "            fig_widget.data[5].x = np.arange(len(losses))\n",
     "            fig_widget.data[5].y = losses\n",
+    "\n",
     "\n",
     "# Run the asynchronous function\n",
     "await rolling_plot(max_samples=100000, epoch=10)"
