--- a/replay.ipynb
+++ b/replay.ipynb
@@ -420,8 +420,8 @@
     "        ask_prices = pxar[:, 1]\n",
     "        times = np.arange(len(bid_prices))  # Assuming levels from 0 to 511\n",
     "\n",
-    "        pred_shape = prediction.reshape(t2l.shape).transpose(1, 0, 2)\n",
-    "        pred_shape = np.clip(pred_shape[:, :, 0], -1, 1)\n",
+    "        pred_t2l = prediction.reshape(t2l.shape).transpose(1, 0, 2)\n",
+    "        pred_t2l = np.clip(pred_t2l[:, :, 0], -1, 1)\n",
     "        losses.append(loss)\n",
     "        losses = losses[-512:]\n",
     "\n",
@@ -438,7 +438,7 @@
     "            fig_widget.data[3].y = ask_prices\n",
     "\n",
     "            # Update prediction heatmap\n",
-    "            fig_widget.data[4].z = pred_shape\n",
+    "            fig_widget.data[4].z = pred_t2l\n",
     "            fig_widget.data[5].x = np.arange(len(losses))\n",
     "            fig_widget.data[5].y = losses\n",
     "\n",
