learn on multi threaded data loading, predicting on test data

--- a/learn.ipynb
+++ b/learn.ipynb
@@ -5,13 +5,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import plotly.graph_objects as go\n",
@@ -26,12 +19,13 @@
     "vis = Visualizer()\n",
     "\n",
     "train_config = TrainConfig()\n",
-    "replay_config = ReplayConfig()\n",
-    "shaper_config = ShaperConfig()\n",
+    "replay_config = ReplayConfig(date_regexp='2024-08')\n",
+    "test_config = ReplayConfig(date_regexp='2024-09')\n",
+    "shaper_config = ShaperConfig(only_full_arrays=True)\n",
     "\n",
     "# Define your asynchronous function to update the figure\n",
     "async def online_learning(train_config, replay_config, shaper_config):\n",
-    "    async for books_arr, t2l, pxar, prediction, loss in train_and_predict(config=train_config, replay_config=replay_config, shaper_config=shaper_config):\n",
+    "    async for books_arr, t2l, pxar, prediction, loss in train_and_predict(config=train_config, replay_config=replay_config, shaper_config=shaper_config, test_config=test_config):\n",
     "        pred_t2l = prediction.reshape(t2l.shape).transpose(1, 0, 2)\n",
     "        pred_t2l = np.clip(pred_t2l[:, :, 0], -1, 1)\n",
     "\n",
