--- a/learn.ipynb
+++ b/learn.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "vis = Visualizer()\n",
     "\n",
-    "train_config = TrainConfig()\n",
+    "train_config = TrainConfig(num_workers=4, batch_size=4)\n",
     "replay_config = ReplayConfig(date_regexp='2024-08')\n",
     "test_config = ReplayConfig(date_regexp='2024-09')\n",
     "shaper_config = ShaperConfig(only_full_arrays=True)\n",
