--- a/learn.ipynb
+++ b/learn.ipynb
@@ -18,9 +18,9 @@
     "\n",
     "vis = Visualizer()\n",
     "\n",
-    "train_config = TrainConfig(num_workers=4, batch_size=4)\n",
-    "replay_config = ReplayConfig(date_regexp='2024-08')\n",
-    "test_config = ReplayConfig(date_regexp='2024-09')\n",
+    "train_config = TrainConfig(num_workers=8, batch_size=32, data_queue_size=512, num_levels=8)\n",
+    "replay_config = ReplayConfig(date_regexp='2024-0', data_dir='/media/photoDS216/crypto/')\n",
+    "test_config = replay_config.but(date_regexp='2024-1')\n",
     "shaper_config = ShaperConfig(only_full_arrays=True)\n",
     "\n",
     "# Define your asynchronous function to update the figure\n",
