--- a/replay.ipynb
+++ b/replay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,22 +235,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px\n",
-    "from skimage import io\n",
-    "\n",
-    "img = io.imread(\n",
-    "    'https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Crab_Nebula.jpg/240px-Crab_Nebula.jpg'\n",
-    ")\n",
-    "fig = px.imshow(img)\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import holoviews as hv\n",
     "\n",
     "hv.extension(\"bokeh\", logo=False)\n",
@@ -271,11 +255,11 @@
     "\n",
     "# Function to update the image\n",
     "async def update_image():\n",
-    "    async for arr in iter_gen_arrays(max_samples=-1):\n",
-    "        im = arr.copy()\n",
-    "        im[:, :, 0] *= -0.5\n",
-    "        im[:, :, 1:3] *= 1e6\n",
-    "        im_display = im.mean(axis=2)\n",
+    "    async for shapes in iter_shapes(\n",
+    "        config=replay_conf_3.but(max_samples=1000, skip_until_time=\"23:15\")\n",
+    "    ):\n",
+    "        books_array = shapes['ETH-USD']\n",
+    "        im_display, _, _ = Visualizer.for_image_display(books_array=books_array)\n",
     "\n",
     "        # Update the stream with the processed image\n",
     "        stream.event(data=im_display)\n",
@@ -320,131 +304,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import plotly.graph_objects as go\n",
-    "from plotly.subplots import make_subplots\n",
-    "from IPython.display import display\n",
+    "import plotly.express as px\n",
+    "from skimage import io\n",
     "\n",
-    "from learn.test_learn import train_and_predict\n",
-    "\n",
-    "async for books_array, time_levels, pxar, prediction, loss in train_and_predict(\n",
-    "    max_samples=10, epoch=1\n",
-    "):\n",
-    "    print(loss)\n",
-    "\n",
-    "\n",
-    "# Define your asynchronous function to update the figure\n",
-    "async def rolling_plot(max_samples=100, epoch=1):\n",
-    "    # Initialize the figure with three subplots and adjust row heights\n",
-    "    fig = make_subplots(\n",
-    "        rows=5,\n",
-    "        cols=1,\n",
-    "        subplot_titles=(\"Books\", \"Level Proximity\", \"Bid and Ask Price Levels\"),\n",
-    "        vertical_spacing=0.05,\n",
-    "        row_heights=[\n",
-    "            0.2,\n",
-    "            0.2,\n",
-    "            0.2,\n",
-    "            0.2,\n",
-    "            0.2,\n",
-    "        ],  # Adjust the relative heights of the rows\n",
-    "    )\n",
-    "\n",
-    "    # Increase the overall figure height\n",
-    "    fig.update_layout(\n",
-    "        height=600,  # Adjusted for three subplots\n",
-    "        width=1200,\n",
-    "        margin=dict(t=50, b=50, l=50, r=50),\n",
-    "        showlegend=True,\n",
-    "    )\n",
-    "\n",
-    "    # Create the figure widget\n",
-    "    fig_widget = go.FigureWidget(fig)\n",
-    "    display(fig_widget)\n",
-    "\n",
-    "    # Initialize empty traces for heatmaps\n",
-    "    im_trace = go.Heatmap(\n",
-    "        z=np.zeros((10, 10)), colorscale='RdBu', zmin=-1, zmax=1, showscale=False\n",
-    "    )\n",
-    "    t2l_trace = go.Heatmap(\n",
-    "        z=np.zeros((10, 10)), colorscale='Turbo', zmin=0, zmax=1, showscale=False\n",
-    "    )\n",
-    "\n",
-    "    # Initialize line traces for bid and ask price levels\n",
-    "    bid_trace = go.Scatter(\n",
-    "        x=[], y=[], mode='lines', line=dict(color='green'), showlegend=False\n",
-    "    )\n",
-    "    ask_trace = go.Scatter(\n",
-    "        x=[], y=[], mode='lines', line=dict(color='red'), showlegend=False\n",
-    "    )\n",
-    "\n",
-    "    pred_trace = go.Heatmap(\n",
-    "        z=np.zeros((10, 10)), colorscale='Turbo', zmin=0, zmax=1, showscale=False\n",
-    "    )\n",
-    "\n",
-    "    # Initialize line traces for bid and ask price levels\n",
-    "    loss_trace = go.Scatter(\n",
-    "        x=[], y=[], mode='lines', line=dict(color='green'), showlegend=False\n",
-    "    )\n",
-    "\n",
-    "    # Add traces to the figure widget\n",
-    "    fig_widget.add_trace(im_trace, row=1, col=1)\n",
-    "    fig_widget.add_trace(t2l_trace, row=2, col=1)\n",
-    "    fig_widget.add_trace(bid_trace, row=3, col=1)\n",
-    "    fig_widget.add_trace(ask_trace, row=3, col=1)\n",
-    "    fig_widget.add_trace(pred_trace, row=4, col=1)\n",
-    "    fig_widget.add_trace(loss_trace, row=5, col=1)\n",
-    "\n",
-    "    # Asynchronous loop to update the figure\n",
-    "    losses = []\n",
-    "    async for shaped, t2l, pxar, prediction, loss in train_and_predict(\n",
-    "        max_samples=max_samples, epoch=epoch\n",
-    "    ):\n",
-    "        # Process your data for heatmaps\n",
-    "        im_data = shaped.copy().transpose(1, 0, 2)\n",
-    "        im_data[:, :, 0] *= -0.5\n",
-    "        im_data[:, :, 1:3] *= 1e6\n",
-    "        im_data = np.clip(im_data, -1, 1)\n",
-    "        t2l_data = np.clip(t2l[:, :, 0].T, -1, 1)\n",
-    "\n",
-    "        # Extract bid and ask prices from pxar\n",
-    "        bid_prices = pxar[:, 0]\n",
-    "        ask_prices = pxar[:, 1]\n",
-    "        times = np.arange(len(bid_prices))  # Assuming levels from 0 to 511\n",
-    "\n",
-    "        pred_t2l = prediction.reshape(t2l.shape).transpose(1, 0, 2)\n",
-    "        pred_t2l = np.clip(pred_t2l[:, :, 0], -1, 1)\n",
-    "        losses.append(loss)\n",
-    "        losses = losses[-512:]\n",
-    "\n",
-    "        # Update the figure widget traces\n",
-    "        with fig_widget.batch_update():\n",
-    "            # Update heatmaps\n",
-    "            fig_widget.data[0].z = im_data.mean(axis=2)\n",
-    "            fig_widget.data[1].z = t2l_data\n",
-    "\n",
-    "            # Update bid and ask price traces\n",
-    "            fig_widget.data[2].x = times\n",
-    "            fig_widget.data[2].y = bid_prices\n",
-    "            fig_widget.data[3].x = times\n",
-    "            fig_widget.data[3].y = ask_prices\n",
-    "\n",
-    "            # Update prediction heatmap\n",
-    "            fig_widget.data[4].z = pred_t2l\n",
-    "            fig_widget.data[5].x = np.arange(len(losses))\n",
-    "            fig_widget.data[5].y = losses\n",
-    "\n",
-    "\n",
-    "# Run the asynchronous function\n",
-    "await rolling_plot(max_samples=100000, epoch=10)"
+    "img = io.imread(\n",
+    "    'https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Crab_Nebula.jpg/240px-Crab_Nebula.jpg'\n",
+    ")\n",
+    "fig = px.imshow(img)\n",
+    "fig.show()"
    ]
   },
   {
@@ -457,7 +325,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
