optim and clean

--- a/replay.ipynb
+++ b/replay.ipynb
@@ -122,7 +122,20 @@
     "\n",
     "\n",
     "# Run the asynchronous function\n",
-    "await rolling_plot(config=replay_conf_3.but(max_samples=100, skip_until_time=\"23:15\"))"
+    "await rolling_plot(config=replay_conf_3.but(\n",
+    "        # max_samples=100, \n",
+    "        # skip_until_time=\"23:15\",\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aaaaaaaaaa"
    ]
   },
   {
