--- a/replay.ipynb
+++ b/replay.ipynb
@@ -19,10 +19,11 @@
    "outputs": [],
    "source": [
     "replay_conf_3 = ReplayConfig(\n",
-    "    markets=[\"ETH-USD\", \"BTC-USD\", \"ETH-BTC\"],\n",
+    "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
     "    data_dir='data',\n",
-    "    date_regexp='2024-08-04',\n",
+    "    date_regexp='2024-1*T16',\n",
     "    max_samples=-1,\n",
+    "    every=\"100ms\",\n",
     ")"
    ]
   },
@@ -34,7 +35,7 @@
    "source": [
     "from deep_orderbook.replayer import iter_sec\n",
     "\n",
-    "async for onesec in iter_sec(config=replay_conf_3.but(max_samples=3)):\n",
+    "async for onesec in iter_sec(config=replay_conf_3.but(max_samples=1)):\n",
     "    print(onesec)"
    ]
   },
@@ -44,22 +45,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shaper_config = ShaperConfig()\n",
-    "\n",
+    "shaper_config = ShaperConfig(\n",
+    "    only_full_arrays=False,\n",
+    "    zoom_frac = 0.0005,\n",
+    "    look_ahead_side_bips = 2,\n",
+    ")\n",
     "\n",
     "async def iter_shapes(config: ReplayConfig):\n",
     "    symbol_shapers = {\n",
     "        pair: ArrayShaper(config=shaper_config) for pair in config.markets\n",
     "    }\n",
     "    async for onesec in iter_sec(config=config):\n",
+    "        if any(onesec.symbols[market].no_bbo() for market in config.markets):\n",
+    "            print('Empty books')\n",
+    "            continue\n",
     "        yield {\n",
     "            market: await symbol_shapers[market].make_arr3d(onesec.symbols[market])\n",
     "            for market in config.markets\n",
     "        }\n",
     "\n",
-    "\n",
     "async for shaped in iter_shapes(\n",
-    "    config=replay_conf_3.but(max_samples=1, skip_until_time=\"23:15\")\n",
+    "    config=replay_conf_3.but(max_samples=4)\n",
     "):\n",
     "    for k, v in shaped.items():\n",
     "        print(f\"{k}: {v.shape}, values from {v.min()} to {v.max()}\")"
@@ -78,7 +84,7 @@
     "\n",
     "\n",
     "async for shapes in iter_shapes(\n",
-    "    config=replay_conf_3.but(max_samples=100, skip_until_time=\"23:15\")\n",
+    "    config=replay_conf_3.but(max_samples=100)\n",
     "):\n",
     "    books_array = shapes['ETH-USD']\n",
     "    im_data, _, _ = Visualizer.for_image_display(books_array=books_array)\n",
@@ -96,7 +102,7 @@
     "from deep_orderbook.shaper import iter_shapes_t2l\n",
     "\n",
     "async for shapes in iter_shapes_t2l(\n",
-    "    replay_config=replay_conf_3.but(max_samples=1, skip_until_time=\"23:15\"),\n",
+    "    replay_config=replay_conf_3.but(max_samples=4),\n",
     "    shaper_config=shaper_config,\n",
     "):\n",
     "    print(shapes[0].shape, shapes[1].shape, shapes[2].shape)"
@@ -111,19 +117,15 @@
     "from deep_orderbook.visu import Visualizer\n",
     "\n",
     "vis = Visualizer()\n",
-    "\n",
-    "\n",
-    "# Define your asynchronous function to update the figure\n",
     "async def rolling_plot(config: ReplayConfig):\n",
     "    async for books_array, t2l_array, pxar in iter_shapes_t2l(\n",
-    "        replay_config=config, shaper_config=shaper_config\n",
+    "        replay_config=config.but(every=\"200ms\"),\n",
+    "        shaper_config=shaper_config.but(zoom_frac=0.0004, look_ahead_side_bips=1)\n",
     "    ):\n",
     "        vis.update(books_z_data=books_array, level_reach_z_data=t2l_array, bidask=pxar)\n",
     "\n",
-    "\n",
-    "# Run the asynchronous function\n",
     "await rolling_plot(config=replay_conf_3.but(\n",
-    "        # max_samples=100, \n",
+    "        max_samples=100, \n",
     "        # skip_until_time=\"23:15\",\n",
     "    )\n",
     ")"
