--- a/learn.ipynb
+++ b/learn.ipynb
@@ -7,9 +7,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import plotly.graph_objects as go\n",
-    "from plotly.subplots import make_subplots\n",
-    "from IPython.display import display\n",
     "\n",
     "from deep_orderbook.learn.test_learn import train_and_predict\n",
     "from deep_orderbook.visu import Visualizer\n",
@@ -18,10 +15,27 @@
     "\n",
     "vis = Visualizer()\n",
     "\n",
-    "train_config = TrainConfig(num_workers=8, batch_size=32, data_queue_size=512, num_levels=8)\n",
-    "replay_config = ReplayConfig(date_regexp='2024-0', data_dir='/media/photoDS216/crypto/')\n",
-    "test_config = replay_config.but(date_regexp='2024-1')\n",
-    "shaper_config = ShaperConfig(only_full_arrays=True)\n",
+    "train_config = TrainConfig(\n",
+    "    num_workers=10,\n",
+    "    batch_size=32,\n",
+    "    data_queue_size=512,\n",
+    "    num_levels=8,\n",
+    "    learning_rate=0.001,\n",
+    ")\n",
+    "replay_config = ReplayConfig(\n",
+    "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
+    "    date_regexp='2024-1*T14',\n",
+    "    data_dir='/media/photoDS216/crypto/',\n",
+    "    every=\"100ms\",\n",
+    ")\n",
+    "shaper_config = ShaperConfig(\n",
+    "    # rolling_window_size=4096,\n",
+    "    only_full_arrays=False,\n",
+    "    zoom_frac = 0.002,\n",
+    "    look_ahead = 32,\n",
+    "    look_ahead_side_bips = 4,\n",
+    ")\n",
+    "test_config = replay_config.but(date_regexp='2024-10-01T14')\n",
     "\n",
     "# Define your asynchronous function to update the figure\n",
     "async def online_learning(train_config, replay_config, shaper_config):\n",
@@ -52,7 +66,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
