--- a/live.ipynb
+++ b/live.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "feed_conf = FeedConfig(\n",
     "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
-    "    every=\"1000ms\",\n",
+    "    freq=4.0,\n",
     ")\n",
     "shaper_config = ShaperConfig(\n",
     "    only_full_arrays=False,\n",
@@ -37,16 +37,13 @@
     "vis = Visualizer()\n",
     "async def rolling_plot(config: FeedConfig):\n",
     "    async for books_array, t2l_array, pxar in iter_shapes_t2l(\n",
-    "        replay_config=config.but(every=\"200ms\"),\n",
+    "        replay_config=config,\n",
     "        shaper_config=shaper_config,\n",
     "        live=True,\n",
     "    ):\n",
     "        vis.update(books_z_data=books_array, level_reach_z_data=t2l_array, bidask=pxar)\n",
     "\n",
-    "await rolling_plot(config=feed_conf.but(\n",
-    "        # max_samples=1000, \n",
-    "    )\n",
-    ")"
+    "await rolling_plot(config=feed_conf)"
    ]
   },
   {
@@ -59,7 +56,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py312",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -73,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
