--- a/learn.ipynb
+++ b/learn.ipynb
@@ -16,24 +16,24 @@
     "vis = Visualizer()\n",
     "\n",
     "train_config = TrainConfig(\n",
-    "    num_workers=10,\n",
-    "    batch_size=32,\n",
+    "    num_workers=5,\n",
+    "    batch_size=4,\n",
     "    data_queue_size=512,\n",
-    "    num_levels=8,\n",
+    "    num_levels=7,\n",
     "    learning_rate=0.001,\n",
     ")\n",
     "replay_config = ReplayConfig(\n",
     "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
-    "    date_regexp='2024-1*T14',\n",
+    "    date_regexp='2024-11-06T01',\n",
     "    data_dir='/media/photoDS216/crypto/',\n",
-    "    every=\"500ms\",\n",
+    "    every=\"100ms\",\n",
     ")\n",
     "shaper_config = ShaperConfig(\n",
     "    # rolling_window_size=4096,\n",
     "    only_full_arrays=False,\n",
-    "    zoom_frac = 0.004,\n",
+    "    zoom_frac = 0.001,\n",
     "    look_ahead = 16,\n",
-    "    look_ahead_side_bips = 32,\n",
+    "    look_ahead_side_bips = 4,\n",
     ")\n",
     "test_config = replay_config.but(date_regexp='2024-11-06T01')\n",
     "\n",
@@ -59,7 +59,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
