fix: match TCN model output size with shaper config
- Add num_side_lvl parameter to TCNModel to control output dimension
- Replace hardcoded 32 levels with configurable 2*num_side_lvl
- Update model initialization in test_learn.py to pass shaper config
- Fix tensor dimension mismatch error in training

This change ensures the model's output tensor size matches the input data
shape defined by the shaper configuration, preventing broadcasting errors
during training.

--- a/learn.ipynb
+++ b/learn.ipynb
@@ -24,18 +24,20 @@
     ")\n",
     "replay_config = ReplayConfig(\n",
     "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
-    "    date_regexp='2024-11-06T01',\n",
+    "    date_regexp='2024-11-06T',\n",
     "    data_dir='/media/photoDS216/crypto/',\n",
-    "    every=\"100ms\",\n",
+    "    every=\"1000ms\",\n",
     ")\n",
     "shaper_config = ShaperConfig(\n",
-    "    # rolling_window_size=4096,\n",
-    "    only_full_arrays=False,\n",
-    "    zoom_frac = 0.001,\n",
-    "    look_ahead = 16,\n",
-    "    look_ahead_side_bips = 4,\n",
+    "    only_full_arrays=True,\n",
+    "    zoom_frac = 0.002,\n",
+    "    num_side_lvl = 4,\n",
+    "    look_ahead = 8,\n",
+    "    look_ahead_side_bips = 10,\n",
+    "    look_ahead_side_width = 4,\n",
+    "    rolling_window_size = 256,\n",
     ")\n",
-    "test_config = replay_config.but(date_regexp='2024-11-06T01')\n",
+    "test_config = replay_config.but(date_regexp='2024-11-07T01')\n",
     "\n",
     "# Define your asynchronous function to update the figure\n",
     "async def online_learning(train_config, replay_config, shaper_config):\n",
@@ -73,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
