--- a/live.ipynb
+++ b/live.ipynb
@@ -19,12 +19,15 @@
    "source": [
     "feed_conf = FeedConfig(\n",
     "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
-    "    freq=4.0,\n",
+    "    freq=10.0,\n",
     ")\n",
     "shaper_config = ShaperConfig(\n",
     "    only_full_arrays=False,\n",
     "    zoom_frac = 0.002,\n",
+    "    num_side_lvl = 4,\n",
     "    look_ahead_side_bips = 10,\n",
+    "    look_ahead_side_width = 4,\n",
+    "    rolling_window_size = 256,\n",
     ")"
    ]
   },
@@ -70,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
