--- a/replay.ipynb
+++ b/replay.ipynb
@@ -62,7 +62,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
