--- a/replay.ipynb
+++ b/replay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +33,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "85be56838a5345c39ef901449d9818ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FigureWidget({\n",
+       "    'data': [{'line': {'color': 'green'},\n",
+       "              'mode': 'lines',\n",
+       "              'showlegend': False,\n",
+       "              'type': 'scatter',\n",
+       "              'uid': '29364efa-38c6-42ce-afb5-ec24bb7ad55b',\n",
+       "              'x': [],\n",
+       "              'xaxis': 'x',\n",
+       "              'y': [],\n",
+       "              'yaxis': 'y'},\n",
+       "             {'line': {'color': 'red'},\n",
+       "              'mode': 'lines',\n",
+       "              'showlegend': False,\n",
+       "              'type': 'scatter',\n",
+       "              'uid': '8154ed23-d343-498f-b17c-ac959262f829',\n",
+       "              'x': [],\n",
+       "              'xaxis': 'x',\n",
+       "              'y': [],\n",
+       "              'yaxis': 'y'},\n",
+       "             {'colorscale': [[0.0, 'rgb(103,0,31)'], [0.1, 'rgb(178,24,43)'],\n",
+       "                             [0.2, 'rgb(214,96,77)'], [0.3, 'rgb(244,165,130)'],\n",
+       "                             [0.4, 'rgb(253,219,199)'], [0.5, 'rgb(247,247,247)'],\n",
+       "                             [0.6, 'rgb(209,229,240)'], [0.7, 'rgb(146,197,222)'],\n",
+       "                             [0.8, 'rgb(67,147,195)'], [0.9, 'rgb(33,102,172)'],\n",
+       "                             [1.0, 'rgb(5,48,97)']],\n",
+       "              'showscale': False,\n",
+       "              'type': 'heatmap',\n",
+       "              'uid': '104ef2fa-eb00-4dba-b17e-fe5c7f508f40',\n",
+       "              'xaxis': 'x2',\n",
+       "              'yaxis': 'y2',\n",
+       "              'z': array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]),\n",
+       "              'zmax': 1,\n",
+       "              'zmin': -1},\n",
+       "             {'colorscale': [[0.0, '#30123b'], [0.07142857142857142, '#4145ab'],\n",
+       "                             [0.14285714285714285, '#4675ed'],\n",
+       "                             [0.21428571428571427, '#39a2fc'], [0.2857142857142857,\n",
+       "                             '#1bcfd4'], [0.35714285714285715, '#24eca6'],\n",
+       "                             [0.42857142857142855, '#61fc6c'], [0.5, '#a4fc3b'],\n",
+       "                             [0.5714285714285714, '#d1e834'], [0.6428571428571429,\n",
+       "                             '#f3c63a'], [0.7142857142857143, '#fe9b2d'],\n",
+       "                             [0.7857142857142857, '#f36315'], [0.8571428571428571,\n",
+       "                             '#d93806'], [0.9285714285714286, '#b11901'], [1.0,\n",
+       "                             '#7a0402']],\n",
+       "              'showscale': False,\n",
+       "              'type': 'heatmap',\n",
+       "              'uid': '18bbc63f-92c0-4c16-bdf3-63e9197fae45',\n",
+       "              'xaxis': 'x3',\n",
+       "              'yaxis': 'y3',\n",
+       "              'z': array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]),\n",
+       "              'zmax': 1,\n",
+       "              'zmin': 0},\n",
+       "             {'colorscale': [[0.0, '#30123b'], [0.07142857142857142, '#4145ab'],\n",
+       "                             [0.14285714285714285, '#4675ed'],\n",
+       "                             [0.21428571428571427, '#39a2fc'], [0.2857142857142857,\n",
+       "                             '#1bcfd4'], [0.35714285714285715, '#24eca6'],\n",
+       "                             [0.42857142857142855, '#61fc6c'], [0.5, '#a4fc3b'],\n",
+       "                             [0.5714285714285714, '#d1e834'], [0.6428571428571429,\n",
+       "                             '#f3c63a'], [0.7142857142857143, '#fe9b2d'],\n",
+       "                             [0.7857142857142857, '#f36315'], [0.8571428571428571,\n",
+       "                             '#d93806'], [0.9285714285714286, '#b11901'], [1.0,\n",
+       "                             '#7a0402']],\n",
+       "              'showscale': False,\n",
+       "              'type': 'heatmap',\n",
+       "              'uid': '2864f406-1d99-4ec9-9318-40776a7809a7',\n",
+       "              'xaxis': 'x4',\n",
+       "              'yaxis': 'y4',\n",
+       "              'z': array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "                          [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]),\n",
+       "              'zmax': 1,\n",
+       "              'zmin': 0},\n",
+       "             {'line': {'color': 'blue'},\n",
+       "              'mode': 'lines',\n",
+       "              'showlegend': False,\n",
+       "              'type': 'scatter',\n",
+       "              'uid': '1d6b7cfc-4507-4f45-bc74-592b697ed003',\n",
+       "              'x': [],\n",
+       "              'xaxis': 'x5',\n",
+       "              'y': [],\n",
+       "              'yaxis': 'y5'}],\n",
+       "    'layout': {'annotations': [{'font': {'size': 16},\n",
+       "                                'showarrow': False,\n",
+       "                                'text': 'Bid and Ask Price Levels',\n",
+       "                                'x': 0.5,\n",
+       "                                'xanchor': 'center',\n",
+       "                                'xref': 'paper',\n",
+       "                                'y': 1.0,\n",
+       "                                'yanchor': 'bottom',\n",
+       "                                'yref': 'paper'},\n",
+       "                               {'font': {'size': 16},\n",
+       "                                'showarrow': False,\n",
+       "                                'text': 'Books',\n",
+       "                                'x': 0.5,\n",
+       "                                'xanchor': 'center',\n",
+       "                                'xref': 'paper',\n",
+       "                                'y': 0.7900000000000001,\n",
+       "                                'yanchor': 'bottom',\n",
+       "                                'yref': 'paper'},\n",
+       "                               {'font': {'size': 16},\n",
+       "                                'showarrow': False,\n",
+       "                                'text': 'Level Proximity',\n",
+       "                                'x': 0.5,\n",
+       "                                'xanchor': 'center',\n",
+       "                                'xref': 'paper',\n",
+       "                                'y': 0.5800000000000001,\n",
+       "                                'yanchor': 'bottom',\n",
+       "                                'yref': 'paper'},\n",
+       "                               {'font': {'size': 16},\n",
+       "                                'showarrow': False,\n",
+       "                                'text': 'Prediction',\n",
+       "                                'x': 0.5,\n",
+       "                                'xanchor': 'center',\n",
+       "                                'xref': 'paper',\n",
+       "                                'y': 0.37000000000000005,\n",
+       "                                'yanchor': 'bottom',\n",
+       "                                'yref': 'paper'},\n",
+       "                               {'font': {'size': 16},\n",
+       "                                'showarrow': False,\n",
+       "                                'text': 'Loss',\n",
+       "                                'x': 0.5,\n",
+       "                                'xanchor': 'center',\n",
+       "                                'xref': 'paper',\n",
+       "                                'y': 0.16000000000000003,\n",
+       "                                'yanchor': 'bottom',\n",
+       "                                'yref': 'paper'}],\n",
+       "               'height': 800,\n",
+       "               'margin': {'b': 50, 'l': 50, 'r': 50, 't': 50},\n",
+       "               'showlegend': True,\n",
+       "               'template': '...',\n",
+       "               'width': 1200,\n",
+       "               'xaxis': {'anchor': 'y', 'domain': [0.0, 1.0]},\n",
+       "               'xaxis2': {'anchor': 'y2', 'domain': [0.0, 1.0]},\n",
+       "               'xaxis3': {'anchor': 'y3', 'domain': [0.0, 1.0]},\n",
+       "               'xaxis4': {'anchor': 'y4', 'domain': [0.0, 1.0]},\n",
+       "               'xaxis5': {'anchor': 'y5', 'domain': [0.0, 1.0]},\n",
+       "               'yaxis': {'anchor': 'x', 'domain': [0.8400000000000001, 1.0]},\n",
+       "               'yaxis2': {'anchor': 'x2', 'domain': [0.6300000000000001, 0.7900000000000001]},\n",
+       "               'yaxis3': {'anchor': 'x3', 'domain': [0.42000000000000004, 0.5800000000000001]},\n",
+       "               'yaxis4': {'anchor': 'x4', 'domain': [0.21000000000000002, 0.37000000000000005]},\n",
+       "               'yaxis5': {'anchor': 'x5', 'domain': [0.0, 0.16000000000000003]}}\n",
+       "})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7c480589c0da44a08bb2414d1d0ff5c6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "grouped: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "vis = Visualizer()\n",
     "async def rolling_plot(config: ReplayConfig):\n",
